[package]
name = "sudoku"
version = "0.1.0"
authors = ["Zohaad Fazal <10496606+zohaad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.46"
num-traits = "0.2.14"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "console",
    "HtmlInputElement",
]